--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <h4 class="preview__name">
                           Pasta with Tomato Cream ...
                         </h4>
-                        <p class="preview__publisher">The Pioneer Woman</p>
+                        <p class="preview__author">The Pioneer Woman</p>
                       </div>
                     </a>
                   </li> -->
@@ -86,8 +86,6 @@
 
       <div class="search-results">
         <ul class="results">
-          <!-- <a href="#5ed6604591c37cdc054bc886">Recipe_1</a>
-          <a href="#5ed6604591c37cdc054bcac4">Recipe_2</a> -->
           <!-- 
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
@@ -212,7 +210,6 @@
         <div class="recipe__ingredients">
           <h2 class="heading--2">Recipe ingredients</h2>
           <ul class="recipe__ingredient-list">
-           
             <li class="recipe__ingredient">
               <svg class="recipe__icon">
                 <use href="src/img/icons.svg#icon-check"></use>
